--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	</section>
 
 	<!-- to-do main container -->
+
+
 	<section class="todo-main-container">
 		<div
 		class="progress-box"
@@ -29,7 +31,27 @@
 			<h3>New To Dos</h3>
 		</div>
 
-		<!--Add progress-box from the reademe-->
+		<div class="progress-box">
+	<h3>In Progress</h3>
+	<ul class="list-group" id="currentList"></ul>
+	</div>
+	<div>
+	</div>
+
+		<div class="progress-box">
+		<h3>Complete</h3>
+		<ul class="list-group" id="archivedList"></ul>
+		</div>
+
+
+		<section id="newTaskForm">
+    <h3 class="todo-form-title">New To Do </h3>
+    <div  class="form-input-container">
+        <img id="cancel" src="./img/icons/cross.png" alt="close form icon">
+        <input id="newItemInput" class="todo-title-input form-input" type="text" placeholder="To-Do Title">
+        <button  id="saveNewItem" class="complete-todo-button">Add To Do</button>
+    </div>
+</section>
 	</section>
 
 	<!-- FORM -->
@@ -43,6 +65,7 @@
 
 	<!--jQuery-->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="./app/scripts/scripts.js"></script>
 	<!--INclude your script file here -->
 </main>
 </body>
